sass/pages/_featuredPets.scss
.featured-pets {
  @include flex-align-justify-center;
  flex-direction: column;
  margin-top: 8.4rem;

  &__slogan {
    font-size: $font-mobile-body-12;
    color: $color-primary-brand;
    font-weight: $font-weight-regular;
  }

  &__title {
    width: 32rem;
    text-align: center;
    font-weight: $font-weight-heavy;
    font-size: $font-mobile-title-h3;
  }

  &__paragraph {
    width: 32rem;
    margin-top: 1.2rem;
    font-size: $font-mobile-body-12;
    color: $color-gray-500;
    font-weight: $font-weight-regular;
  }

  &__adoption-link {
    justify-self: center;
    margin-top: 3.6rem;
    color: $color-secondary-dark;
    font-size: $font-mobile-body-12;
    font-weight: $font-weight-bold;
    text-decoration: underline;
    justify-content: center;

    &--link {
      text-decoration: underline;
    }
  }
}

// PC MEDIA QUERRY

@media (min-width: $breakpoint-desktop) {
  .featured-pets {
    &__slogan {
      font-size: $font-desktop-body-16;
      font-weight: $font-weight-semi-bold;
    }

    &__title {
      font-size: $font-desktop-title-h3;
      width: auto;
    }

    &__paragraph {
      font-size: $font-desktop-body-24;
      width: auto;
    }

    &__adoption-link {
      font-size: $font-desktop-body-20;
    }
  }
}

